# open-offerflow

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
docs/: mvp-architecture.md
migrations/: 0001_initial.sql
src/offerflow/: __init__.py  __main__.py  cli.py  config.py  crawl.py  errors.py  extract.py  http.py  output.py  paths.py  registry.py  storage.py  timeutils.py
src/offerflow/adapters/: __init__.py  alibaba.py  base.py  bytedance.py  html_fallback.py  registry.py  tencent.py
tests/: test_cli.py  test_extract.py  test_storage.py
