[project]
name = "open-offerflow"
version = "0.1.0"
description = "Local-first job intelligence CLI for tracking company career sites."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open OfferFlow Contributors" }
]
dependencies = [
  "pyyaml>=6.0.2",
  "typer>=0.12.5",
]

[project.scripts]
offerflow = "offerflow.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/offerflow"]

[tool.hatch.build.targets.wheel.force-include]
"migrations" = "migrations"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-tmp"
